Add 64bit dll variant

--- a/PermuteMMO.Reversal/Properties/Resources.resx
+++ b/PermuteMMO.Reversal/Properties/Resources.resx
@@ -118,7 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="PLA-SeedFinder" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\deps\PLA-SeedFinder.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="PLA_SeedFinder_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\deps\PLA-SeedFinder_32.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="PLA_SeedFinder_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\deps\PLA-SeedFinder_64.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
